# vision-ai-tracker

./: .gitignore  README.md  app.py  pyproject.toml
assets/: script.js  style.css
core/: constants.py  processor.py  utils.py  webcam_recog.py
